# hass-soma-connect

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  hacs.json  info.md  pyproject.toml  renovate.json
.github/workflows/: hacs.yml  hassfest.yml
custom_components/soma_connect/: __init__.py  config_flow.py  const.py  coordinator.py  cover.py  entity.py  manifest.json  sensor.py  strings.json
custom_components/soma_connect/translations/: en.json
