[tool.poetry]
name = "hass-soma-connect"
version = "0.1.0"
description = "SOMA Connect integration for Home Assistant"
authors = ["Avi Miller <me@dje.li>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hass_soma_connect"}]

[tool.poetry.dependencies]
python = "^3.10"
homeassistant = "^2022.12.6"
colorlog = "^6.7.0"
aiosoma = "^1.0.0"



[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.20.3"
pytest-aiohttp = "^1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
