[tool.poetry]
name = "hass-soma-connect"
version = "2023.8.1"
description = "SOMA Connect integration for Home Assistant"
authors = ["Avi Miller <me@dje.li>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hass_soma_connect"}]

[tool.poetry.dependencies]
python = "^3.11"
aiosoma = "^1.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.11.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.0"
pytest-asyncio = "^0.23.0"
pytest-aiohttp = "^1.0.4"

[tool.black]
target-version = ["py311"]

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
known_first_party = [
    "homeassistant",
    "tests",
]
forced_separate = [
    "tests",
]
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
